fixed border alignment

--- a/src/css/components/_library.scss
+++ b/src/css/components/_library.scss
@@ -6,13 +6,13 @@
 }
 
 .library__grid {
-  grid-auto-columns: repeat(6, minmax(0, 1fr));
+  grid-template-columns: repeat(6, minmax(0, 1fr));
   grid-template-rows: var(--map-height) minmax(0, 1fr);
 }
 
-.library__library-card--no-border {
+.library__library-card {
   @include library-results.library-results__library-card--libraries-list-item;
-  border: none;
+  border-top: 2px solid white;
   grid-column: 1 / span 1;
   grid-row: 2 / span 1;
   overflow-y: scroll;
